packages/web/src/components/gcds-table/gcds-table.css
@layer reset, default, empty, controls, pagination, overwrites, modal, alignment;

@layer reset {
  :host {
    display: block;

    slot {
      display: initial;
    }
  }
}

@layer default {
  :host .gcds-table {
    font: var(--gcds-table-font);

    table {
      width: 100%;
      border-collapse: collapse;
      border-block-start: var(--gcds-table-border-width) solid
        var(--gcds-table-outer-border-color);
      color: var(--gcds-table-text);
      margin-block-start: var(--gcds-table-margin);

      /* Visually hide caption but keep it accessible to screen readers */
      caption {
        clip-path: inset(100%);
        clip: rect(1px, 1px, 1px, 1px);
        height: 1px;
        overflow: hidden;
        position: absolute;
        white-space: nowrap;
        width: 1px;
      }

      th {
        font-weight: var(--gcds-table-header-cell-font-weight);
        text-align: left;
        color: var(--gcds-table-header-cell-text);
        border-block-end: var(--gcds-table-header-cell-border-width) solid
          var(--gcds-table-header-cell-border-color);

        /* Header sorting interaction buttons */
        & > button {
          all: unset;
          cursor: pointer;

          &:hover {
            background: var(--gcds-table-header-cell-hover-background);
          }

          &:focus {
            background-color: var(--gcds-table-header-cell-focus-background);
            color: var(--gcds-table-header-cell-focus-text);
            outline: var(--gcds-table-header-cell-focus-outline-width) solid
              var(--gcds-table-header-cell-focus-background);
            outline-offset: var(--gcds-table-header-cell-focus-outline-offset);
            border-color: var(--gcds-table-header-cell-focus-background);
            box-shadow: var(--gcds-table-header-cell-focus-box-shadow);
          }
        }

        & > button,
        &:not(:has(> button)) {
          @media only screen and (width >= 48em) {
            padding: var(--gcds-table-cell-padding-desktop);
          }
        }

        &[aria-sort='none'] > button {
          /* Hide sort icons in default state */
          &:not(:hover):not(:focus):not(:active) {
            .gcds-table__sort-icon {
              opacity: 0;
            }
          }
        }
      }

      tbody {
        tr,
        th {
          border-block-end: var(--gcds-table-border-width) solid
            var(--gcds-table-cell-border-color);
        }

        td {
          @media only screen and (width >= 48em) {
            padding: var(--gcds-table-cell-padding-desktop);
          }
        }
      }

      /* If tbody contains row headers (th), add a vertical divider after the first column */
      @media only screen and (width >= 48em) {
        &:has(tbody th) thead th:first-child,
        tbody th {
          border-inline-end: var(--gcds-table-header-cell-border-width) solid
            var(--gcds-table-header-cell-border-color);
        }
      }

      @media only screen and (width < 48em) {
        th,
        td {
          display: block;
          font-weight: var(--gcds-table-font-weight-mobile);
          padding: var(--gcds-table-cell-padding-mobile);

          &:before {
            display: block;
            content: attr(data-column);
            font-size: var(--gcds-table-font-size-small);
            color: var(--gcds-table-label-mobile);
          }

          &:first-of-type {
            padding-block-start: var(
              --gcds-table-cell-padding-mobile-first-last
            );
          }

          &:last-of-type {
            padding-block-end: var(--gcds-table-cell-padding-mobile-first-last);
          }
        }

        thead th {
          position: absolute;
          clip: rect(0 0 0 0);
        }

        tbody th {
          border: 0;
        }
      }
    }
  }
}

@layer empty {
  :host .gcds-table {
    .gcds-table__empty {
      background-color: var(--gcds-table-empty-background);
      padding: var(--gcds-table-empty-padding-desktop);

      @media only screen and (width < 48em) {
        padding: var(--gcds-table-empty-padding-mobile);
      }
    }
  }
}
/* ... */

